[tool.poetry]
name = "atcoder-py"
version = "0.1.0"
description = "Python用AtCoder環境"
authors = ["りーべ <liebe.magi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10,<3.11"
numpy = "1.24.1"
pandas = "1.5.2"
networkx = "3.0"
sympy = "1.11.1"
sortedcontainers = "2.4.0"
more-itertools = "9.0.0"
bitarray = "2.6.2"
pulp = "2.7.0"
mpmath = "1.2.1"
z3-solver = "4.12.1.0"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
poethepoet = "^0.21.1"
online-judge-tools = "^11.5.1"

[tool.poe.tasks]
    [tool.poe.tasks.new]
    help = "Generate new contest directory"
    cmd = "acc new"
    [tool.poe.tasks.n]
    help = "Generate new contest directory"
    cmd = "acc new"
    [tool.poe.tasks.test]
    help = "Run test cases"
    args = [
        { name = "contestID", positional = true, required = true},
        { name = "taskID", positional = true, required = true}
    ]
    cmd = "oj test -d ${contestID}/${taskID}/tests -c \"python ${contestID}/${taskID}/main.py\""
    [tool.poe.tasks.t]
    help = "Run test cases"
    args = [
        { name = "contestID", positional = true, required = true},
        { name = "taskID", positional = true, required = true}
    ]
    cmd = "oj test -d ${contestID}/${taskID}/tests -c \"python ${contestID}/${taskID}/main.py\""
    [tool.poe.tasks.submit]
    help = "Submit to AtCoder"
    args = [
        { name = "contestID", positional = true, required = true},
        { name = "taskID", positional = true, required = true}
    ]
    cmd = "acc submit -c ${contestID} -t ${contestID}_${taskID} ${contestID}/${taskID}/main.py -- --guess-python-interpreter pypy"
    [tool.poe.tasks.s]
    help = "Submit to AtCoder"
    args = [
        { name = "contestID", positional = true, required = true},
        { name = "taskID", positional = true, required = true}
    ]
    cmd = "python scripts/submit.py ${contestID} ${taskID}"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
